Closed
Bug 302566
Opened 21 years ago
Closed 14 years ago
when JavaScript is disabled, alternate content provided within the canvas element is not rendered and the canvas element still is rendered
Categories
(Core :: Layout, defect, P3)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla12
People
(Reporter: grantwohl+mozbug, Assigned: bzbarsky)
References
Details
(Keywords: dev-doc-complete, testcase)
Attachments
(3 files)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050728 Firefox/1.0+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050728 Firefox/1.0+
When JavaScript is disabled, alternate content provided within the canvas
element is not rendered. The canvas element itself is rendered. HTML5 says:
“When authors use the canvas element, they should also provide content that,
when presented to the user, conveys essentially the same function or purpose as
the bitmap canvas. This content may be placed as content of the canvas element.”
And:
“In non-visual media, and in visual media with scripting disabled, the canvas
element should be treated as an ordinary block-level element and the fallback
content should therefore be used instead.”
Reproducible: Always
Steps to Reproduce:
1.Turn off JavaScript.
2.View the testcase.
Actual Results:
An empty canvas element was displayed.
Expected Results:
The content within the canvas element should have been displayed.
| Reporter | ||
Comment 1•21 years ago
|
||
| Reporter | ||
Updated•21 years ago
|
Keywords: regression,
testcase
Comment 2•21 years ago
|
||
That's true; see no canvas element with JavaScript disabled.
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Not a regression; AFAIK we never implemented fallback.
Keywords: regression
| Reporter | ||
Comment 4•21 years ago
|
||
(In reply to comment #3)
> Not a regression; AFAIK we never implemented fallback.
You're right about fallback, but before canvas was implemented, it behaved as
expected. :-)
| Reporter | ||
Updated•21 years ago
|
Flags: blocking1.8b5?
Comment 5•21 years ago
|
||
minusing. too late for the 1.5 train and no patch in hand. I'm also basing this
on Vlad's comment.
Flags: blocking1.8b5? → blocking1.8b5-
Updated•18 years ago
|
Priority: -- → P5
Component: Canvas: 2D → Layout
OS: Windows XP → All
Priority: P5 → P3
QA Contact: canvas.2d → layout
Hardware: x86 → All
| Assignee | ||
Comment 10•14 years ago
|
||
Attachment #582269 -
Flags: review?(tnikkel)
| Assignee | ||
Updated•14 years ago
|
Assignee: nobody → bzbarsky
Whiteboard: [need review]
Updated•14 years ago
|
Attachment #582269 -
Flags: review?(tnikkel) → review+
| Assignee | ||
Updated•14 years ago
|
Whiteboard: [need review] → [need landing]
| Assignee | ||
Comment 11•14 years ago
|
||
Flags: in-testsuite?
Whiteboard: [need landing]
Target Milestone: --- → mozilla12
Comment 12•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 14•14 years ago
|
||
Documentation updated:
https://developer.mozilla.org/en/HTML/Element/canvas
And mentioned on Firefox 12 for developers.
Keywords: dev-doc-needed → dev-doc-complete
You need to log in
before you can comment on or make changes to this bug.
Description
•