Bug 302566.  Show canvas fallback content when script is disabled.  r=tnikkel